# Tello-ros2-vision-and-trajectory

./: .gitignore  ARL_run.sh  Colors.py  Grid.docx  Point3D.py  README.md  TrajectoryDetector.py  main.py  paper_detect.py  setup.cfg
action/: Detect.action
action_detect/: CMakeLists.txt  package.xml
action_detect/action/: Detect.action
drone_control/: README.md  package.xml  setup.py
drone_control/drone_control/: control_client.py
drone_control_demo/: package.xml  setup.cfg  setup.py
drone_control_demo/drone_control_demo/: control_client.py
drone_control_demo/install/: local_setup.sh  setup.sh
drone_control_demo/log/: latest_build
gazebo_bridge_ws/src/gazebo_bridge_interfaces_msgs/: CMakeLists.txt  package.xml
gazebo_bridge_ws/src/gazebo_topic_republisher/: CMakeLists.txt  package.xml
gazebo_bridge_ws/src/gazebo_topic_republisher/include/: gazebo_to_ros_node.hpp
gazebo_bridge_ws/src/gazebo_topic_republisher/src/: gazebo_to_ros_node.cpp
paper_detection/: package.xml  setup.py
paper_detection/paper_detection/: Colors.py  PathDetector.py  Point3D.py  detect_server.py
paper_detection_demo/: package.xml  setup.cfg  setup.py
paper_detection_demo/paper_detection_demo/: PathDetector.py  detect_server.py
path_models/: ARL_world.world  ARL_world_01.world  ARL_world_02.world  ARL_world_03.world
tello_cam_lab/: main.py
tello_ros_ws/src/trajectory_generator/: package.xml  setup.py
tello_ros_ws/src/trajectory_interfaces_msgs/: CMakeLists.txt  package.xml
test_node/: package.xml  setup.cfg  setup.py
test_node/test_node/: control_test_node.py
(+11 files in other folders)
